# onrobot_ros2

./: .gitignore  .gitmodules  README.md
OnRobot_ROS2_Description/: CMakeLists.txt
OnRobot_ROS2_Description/urdf/: onrobot.urdf.xacro  onrobot_macro.xacro
Onrobot_VG_Driver/: CMakeLists.txt
Onrobot_VG_Driver/include/onrobot_driver/: VG.hpp  vg_hardware_interface.hpp
Onrobot_VG_Driver/src/: vg_hardware_interface.cpp
onrobot_descriptions/: CMakeLists.txt  package.xml
onrobot_descriptions/urdf/: onrobot.urdf.xacro  onrobot_macro.xacro
onrobot_descriptions/urdf/rg_series/: rg2_macro.xacro  rg6_macro.xacro
onrobot_descriptions/urdf/vg_series/vg10/: vg10_macro.xacro
onrobot_descriptions/urdf/vg_series/vgc10/: vgc10_macro.xacro
onrobot_drivers/: CMakeLists.txt  README.md  package.xml  rg_hardware_interface.xml  vg_hardware_interface.xml
onrobot_drivers/config/: vg_controllers.yaml
onrobot_drivers/include/onrobot_drivers/rg/: RG.hpp  rg_hardware_interface.hpp
onrobot_drivers/include/onrobot_drivers/vg/: VG.hpp  vg_hardware_interface.hpp
onrobot_drivers/launch/: onrobot_control.launch.py
onrobot_drivers/src/: VG.cpp
onrobot_drivers/src/rg/: RG.cpp  rg_hardware_interface.cpp
onrobot_drivers/src/vg/: VG.cpp  vg_hardware_interface.cpp
onrobot_interfaces/: CMakeLists.txt  package.xml
onrobot_interfaces/action/: VGC10GripperCommand.action
onrobot_interfaces/srv/: VGC10Status.srv
vacuum/onrobot_vg_description/: CMakeLists.txt  package.xml
vacuum/onrobot_vg_description/launch/: bringup_new.launch.py  view_gripper.launch.py
vacuum/onrobot_vg_description/urdf/: onrobot_vgc10_4cups_model.xacro  onrobot_vgc10_4cups_model_macro.xacro
vacuum/vgc10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
vacuum/vgc10_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  onrobot_vgc10_model.srdf  ros2_controllers.yaml
vacuum/vgc10_moveit_config/rviz/: view_robot.rviz
vacuum/vgc10_moveit_config/srdf/: onrobot_vgc10_model.srdf
vacuum/vgc10driver/: package.xml  setup.cfg  setup.py
vacuum/vgc10driver/launch/: bringup.launch.py  vgc10_driver.launch.py
vacuum/vgc10driver/vgc10driver/: modbus_tcp_client.py  vgc10_gripper_base.py  vgc10_ros2_driver.py
