<?xml version="1.0"?>
<package format="3">
  <name>onrobot_vg_description</name>
  <version>1.0.0</version>
  <description>OnRobot VG model description package</description>
  <license>MIT</license>
  <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
