<?xml version="1.0"?>
<package format="3">
  <name>vgc10_moveit_config</name>
  <version>0.3.0</version>
  <description>MoveIt2 configuration for the OnRobot VGC10 model</description>
  <maintainer email="alejandro.gonzalez@eurecat.org">Alejandro Gonzalez</maintainer>
  <author email="alejandro.gonzalez@eurecat.org">Alejandro Gonzalez</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>onrobot_vg_description</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
